Tests/CompilerTests/negative/extern-c-indirect-typing.hylo
// Must not have a body.
@extern_c_indirect("f1")
fun f1() {}

// Cannot be combined with @extern.
@extern
@extern_c_indirect("f2")
fun f2()

// Must not be generic
@extern_c_indirect("ok")
fun f3<T>()
